create computation performance test